# qt_qml_cmake_template

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  resources.qrc
app/qml/: main.qml
app/resources/styles/: qtquickcontrols2.conf
app/src/: main.cpp  xyz.cpp
app_libs/: CMakeLists.txt
